Added the completed query parameter AND updated OpenAPI documentation
